# Working-with-LangChain-Crash-Course

./: .gitignore  .set_env.sh  Home.py  SAMPLES_SUMMARY.md  justfile  main.py  pyproject.toml
lib/helper_streamlit/: show_source.py
pages/: 2Prompts and Parsers.py  3Chains.py  6Memory.py
pages/00_home/: 00_Intro.py
pages/01_learn/: 01_LLMs.py  02_Prompts and Parsers.py  03_Chains.py  04_Embeddings and Vectorstores.py  05_Document Loaders and Splitters.py  06_Memory.py  07_Hands-on Projects.py
pages/02_projects/: 01_Invoice_Data_Extractor.py  10_Langchain_Audio_To_Text.py  11_Langchain_Basic_QA.py  12_Langchain_Summarization.py  20_Wordpress_Code_Assistant.py
pages/11_beginner/: 01_Simple_Chat.py  02_Prompt_Template.py  03_Output_Parser.py  04_Simple_Chain.py  05_Chat_History.py  06_Text_Embeddings.py  07_Document_Loader.py  08_Text_Splitter.py  09_Vector_Store.py  10_Simple_RAG.py
pages/12_advanced/: 01_Custom_Chain.py  02_Conversation_Buffer.py  03_MultiQuery_RAG.py  04_Streaming_Chat.py  05_Function_Calling.py  06_Agent_Basics.py  07_PDF_RAG_Advanced.py  08_Web_Scraping_QA.py  09_Structured_Output.py  10_Routing_Chain.py
pages/13_expert/: 01_LangGraph_Basics.py  02_Multi_Agent_System.py  03_Custom_Tools.py  04_Agentic_RAG.py  05_Conditional_Graph.py  06_Human_In_Loop.py  07_Multimodal_Agent.py  08_Advanced_Memory.py  09_Self_RAG.py  10_Production_Pipeline.py
pages/advanced/: 01_Custom_Chain.py  02_Conversation_Buffer.py  03_MultiQuery_RAG.py  04_Streaming_Chat.py  05_Function_Calling.py  06_Agent_Basics.py  07_PDF_RAG_Advanced.py  08_Web_Scraping_QA.py  (+2 more)
(+21 files in other folders)
