[project]
name = "working-with-langchain-crash-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.11,<4.0"

dependencies = [
    "bs4>=0.0.2",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "ollama>=0.6.0,<1.0.0",
    "pypdf>=6.5.0",
    "streamlit>=1.52.2",
    "tiktoken>=0.12.0",
    "watchdog>=6.0.0",
]
